# clinews

./: .env  .gitmodules  Cargo.toml  README.md
.rpm/: clinews.spec
clinews/: .gitignore  Cargo.toml
clinews/src/: main.rs
newsapi/: Cargo.toml
newsapi/src/: lib.rs
src/: main.rs
